Fix for home screen rendering on mobile devices

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -3,6 +3,13 @@
     height: 100%;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
+}
+
+.content-wrapper {
+    display: flex;
+    flex-direction: column;
+    overflow: auto;
 }
 
 .spacer {
